--- a/taskrunner/Cargo.toml
+++ b/taskrunner/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
 day_01 = { path = "../days/day_01" }
 day_02 = { path = "../days/day_02" }
 day_03 = { path = "../days/day_03" }
 day_04 = { path = "../days/day_04" }
+day_05 = { path = "../days/day_05" }
