--- a/taskrunner/Cargo.toml
+++ b/taskrunner/Cargo.toml
@@ -13,3 +13,4 @@ day_04 = { path = "../days/day_04" }
 day_05 = { path = "../days/day_05" }
 day_06 = { path = "../days/day_06" }
 day_07 = { path = "../days/day_07" }
+day_08 = { path = "../days/day_08" }
